# worldengine-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  setup-cdt.sh  setup-debug.bat  setup-debug.sh  setup-release.bat  setup-release.sh  setup.bat
.github/workflows/: codeql-analysis.yml
cli/: CMakeLists.txt
cli/source/: main.cpp  types.cpp  types.h  worldengine.cpp  worldengine.h
docs/: CMakeLists.txt  biomes.rst  cli.rst  conf.py  global.rst  gui.rst  index.rst  install.rst  requirements.txt
docs/_static/: custom.css
tools/: setup-common.bat  setup-common.sh
worldengine/: CMakeLists.txt
worldengine/include/worldengine/: common.h  export.h  generation.h  plates.h  world.h
worldengine/include/worldengine/images/: ancient_map_image.h  biome_image.h  elevation_image.h  heightmap_image.h  icecap_image.h  image.h  precipitation_image.h  river_image.h  satellite_image.h  scatter_plot_image.h  simple_elevation_image.h  temperature_image.h  world_image.h
worldengine/source/: basic.cpp  basic.h  biome.h  common.cpp  common.h  draw.cpp  draw.h  export.cpp  generation.cpp  generation.h  path.cpp  path.h  plates.cpp  plates.h  world.cpp  world.h
worldengine/source/images/: ancient_map_image.cpp  biome_image.cpp  biome_image.h  elevation_image.cpp  heightmap_image.cpp  heightmap_image.h  icecap_image.cpp  icecap_image.h  image.cpp  image.h  ocean_image.cpp  ocean_image.h  precipitation_image.cpp  precipitation_image.h  river_image.cpp  river_image.h  satellite_image.cpp  satellite_image.h  scatter_plot_image.cpp  scatter_plot_image.h  simple_elevation_image.cpp  simple_elevation_image.h  temperature_image.cpp  temperature_image.h  world_image.cpp
worldengine/source/simulations/: biome.cpp  biome.h  erosion.cpp  erosion.h  humidity.cpp  humidity.h  hydrology.cpp  hydrology.h  icecap.cpp  icecap.h  irrigation.cpp  irrigation.h  permeability.cpp  permeability.h  precipitation.cpp  precipitation.h  temperature.cpp  temperature.h
worldengine/test/: CMakeLists.txt
worldengine/test/source/: BasicTest.cpp  Functions.cpp  Functions.h  GenerationTest.cpp  ImageTest.cpp  PathTest.cpp  SerializationTest.cpp  SimulationTest.cpp
worldengine/test/source/simulations/: TemperatureTest.cpp
